Fixed #2261: Submit icons were not visible (Ubuntu / FF 32.0.4). Commit d11db1fa533684f81a321e4c5fc02acb25c47f12 made the Image Gallery thumbnails being too small (16x16). See also https://forja.cenatic.es/tracker/?func=detail&atid=1107&aid=2268&group_id=197

--- a/exe/webui/css/exe.css
+++ b/exe/webui/css/exe.css
@@ -142,8 +142,6 @@ color: #000000;
  
 /* adds tiny bit of padding to edit.png when in preview mode */
 img.submit {
-    width: 16px;
-    height: 16px;
     padding: 0 0 2px 2px;
 }
 
